@@ -7,4 +7,7 @@ Configuration information has been separated out of bimagemgr.pl into a new
 file config.pm. This file will not be overwritten by the installer when 
 upgrading in the future. If you are upgrading from earlier releases you will 
 need to transfer your configuration information out of bimagemgr.pl into the 
-new config.pm
+new config.pm file.
+
+A post install script in the rpm package will add the web server user to the 
+group bacula.
